--- a/Templates/business_template.html
+++ b/Templates/business_template.html
@@ -408,7 +408,7 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="member d-flex align-items-start">
-                            <div class="pic"><img src="../Photos/hero-img.png" class="img-fluid" alt=""></div>
+                            <div class="pic"><img src="../Photos/team-1.jpg" class="img-fluid" alt=""></div>
                             <div class="member-info">
                                 <h4>Walter White</h4> <span>Chief Executive Officer</span>
                                 <p>Explicabo voluptatem mollitia et repellat qui dolorum quasi</p>
@@ -419,9 +419,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 mt-4 mt-lg-0 aos-init aos-animate" data-aos="zoom-in" data-aos-delay="200">
+                    <div class="col-lg-6 mt-4 mt-lg-0">
                         <div class="member d-flex align-items-start">
-                            <div class="pic"><img src="../Photos/hero-img.png" class="img-fluid" alt=""></div>
+                            <div class="pic"><img src="../Photos/team-2.jpg" class="img-fluid" alt=""></div>
                             <div class="member-info">
                                 <h4>Sarah Jhonson</h4> <span>Product Manager</span>
                                 <p>Aut maiores voluptates amet et quis praesentium qui senda para</p>
@@ -432,9 +432,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 mt-4 aos-init aos-animate" data-aos="zoom-in" data-aos-delay="300">
+                    <div class="col-lg-6 mt-4">
                         <div class="member d-flex align-items-start">
-                            <div class="pic"><img src="../Photos/hero-img.png" class="img-fluid" alt=""></div>
+                            <div class="pic"><img src="../Photos/team-3.jpg" class="img-fluid" alt=""></div>
                             <div class="member-info">
                                 <h4>William Anderson</h4> <span>CTO</span>
                                 <p>Quisquam facilis cum velit laborum corrupti fuga rerum quia</p>
@@ -445,9 +445,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 mt-4 aos-init aos-animate" data-aos="zoom-in" data-aos-delay="400">
+                    <div class="col-lg-6 mt-4">
                         <div class="member d-flex align-items-start">
-                            <div class="pic"><img src="../Photos/hero-img.png" class="img-fluid" alt=""></div>
+                            <div class="pic"><img src="../Photos/team-4.jpg" class="img-fluid" alt=""></div>
                             <div class="member-info">
                                 <h4>Amanda Jepson</h4> <span>Accountant</span>
                                 <p>Dolorum tempora officiis odit laborum officiis et et accusamus</p>
@@ -478,8 +478,10 @@
                                 <li><i class="fa-solid fa-check"></i> Quam adipiscing vitae proin</li>
                                 <li><i class="fa-solid fa-check"></i> Nec feugiat nisl pretium</li>
                                 <li><i class="fa-solid fa-check"></i> Nulla at volutpat diam uteera</li>
-                                <li class="na"><i class="fa-solid fa-x"></i> <span>Pharetra massa massa ultricies</span></li>
-                                <li class="na"><i class="fa-solid fa-x"></i> <span>Massa ultricies mi quis hendrerit</span>
+                                <li class="na"><i class="fa-solid fa-x"></i> <span>Pharetra massa massa ultricies</span>
+                                </li>
+                                <li class="na"><i class="fa-solid fa-x"></i> <span>Massa ultricies mi quis
+                                        hendrerit</span>
                                 </li>
                             </ul> <a href="#" class="buy-btn">Get Started</a>
                         </div>
@@ -509,6 +511,134 @@
                                 <li><i class="fa-solid fa-check"></i> Massa ultricies mi quis hendrerit</li>
                             </ul> <a href="#" class="buy-btn">Get Started</a>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="faq" class="faq section-bg">
+            <div class="container">
+                <div class="section-title">
+                    <h2>Frequently Asked Questions</h2>
+                    <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit
+                        sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias
+                        ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+                </div>
+                <div class="accordion-list">
+                    <ul>
+                        <li class="li1">
+                            <a data-target="#acordion-list-1" data-toggle="collapse" class="collapse">
+                                <span class="fa-sharp fa-regular fa-circle-question"></span>Non consectetur a erat nam
+                                at lectus urna duis?
+                                <i class="fa-solid fa-chevron-down icon-show"></i>
+                                <i class="fa-solid fa-chevron-up icon-close"></i>
+                            </a>
+                            <div class="collapsed" id="acordion-list-1" data-parent=".accordion-list">
+                                <p>
+                                    Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus
+                                    laoreet non curabitur gravida. Venenatis lectus magna fringilla urna
+                                    porttitor rhoncus dolor purus non.
+                                </p>
+                            </div>
+                        </li>
+                        <li class="li2"> <a data-toggle="collapse" data-target="#acordion-list-2"
+                                class="collapsed"><span class="fa-sharp fa-regular fa-circle-question"></span> Feugiat
+                                scelerisque varius morbi enim nunc?
+                                <i class="fa-solid fa-chevron-down icon-show"></i>
+                                <i class="fa-solid fa-chevron-up icon-close"></i></a>
+                            <div id="acordion-list-2" class="collapse" data-parent=".accordion-list">
+                                <p>
+                                    Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id
+                                    interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus
+                                    scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper
+                                    dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
+                                </p>
+                            </div>
+                        </li>
+                        <li class="li3"> <a data-toggle="collapse" data-target="#acordion-list-3"
+                                class="collapsed"><span class="fa-sharp fa-regular fa-circle-question"></span> Dolor sit
+                                amet consectetur adipiscing elit?
+                                <i class="fa-solid fa-chevron-down icon-show"></i>
+                                <i class="fa-solid fa-chevron-up icon-close"></i></a>
+                            <div id="acordion-list-3" class="collapse" data-parent=".accordion-list">
+                                <p> Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci.
+                                    Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet
+                                    nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis
+                                    convallis convallis tellus. Urna molestie at elementum eu facilisis sed odio
+                                    morbi quis</p>
+                            </div>
+                        </li>
+                        <li class="li4"> <a data-toggle="collapse" data-target="#acordion-list-4"
+                                class="collapsed"><span class="fa-sharp fa-regular fa-circle-question"></span> Tempus
+                                quam pellentesque nec nam aliquam sem et tortor
+                                consequat?
+                                <i class="fa-solid fa-chevron-down icon-show"></i>
+                                <i class="fa-solid fa-chevron-up icon-close"></i></a>
+                            <div id="acordion-list-4" class="collapse" data-parent=".accordion-list">
+                                <p> Molestie a iaculis at erat pellentesque adipiscing commodo. Dignissim suspendisse in
+                                    est ante in. Nunc vel risus commodo viverra maecenas accumsan. Sit amet nisl
+                                    suscipit adipiscing bibendum est. Purus gravida quis blandit turpis cursus in.</p>
+                            </div>
+                        </li>
+                        <li class="li5"> <a data-toggle="collapse" data-target="#acordion-list-5"
+                                class="collapsed"><span class="fa-sharp fa-regular fa-circle-question"></span> Tortor
+                                vitae purus faucibus ornare. Varius vel
+                                pharetra vel turpis nunc eget lorem dolor?
+                                <i class="fa-solid fa-chevron-down icon-show"></i>
+                                <i class="fa-solid fa-chevron-up icon-close"></i></a>
+                            <div id="acordion-list-5" class="collapse" data-parent=".accordion-list">
+                                <p> Laoreet sit amet cursus sit amet dictum sit amet justo. Mauris vitae ultricies leo
+                                    integer malesuada nunc vel. Tincidunt eget nullam non nisi est sit amet. Turpis nunc
+                                    eget lorem dolor sed. Ut venenatis tellus in metus vulputate eu scelerisque.</p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+        <section id="contact" class="contact" style="background-color: white;">
+            <div class="container">
+                <div class="section-title">
+                    <h2>Contact</h2>
+                    <p style="color: #343a40;">Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex
+                        aliquid fuga eum quidem. Sit
+                        sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias
+                        ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+                </div>
+                <div class="row">
+                    <div class="col-lg-5 d-flex align-items-stretch">
+                        <div class="info">
+                            <div class="address"> <i class="fa fa-location-dot"></i>
+                                <h4>Location:</h4>
+                                <p> Zam Zam Height, Liqat Chowk, Lahore, Pakistan</p>
+                            </div>
+                            <div class="email"> <i class="fa fa-envelope"></i>
+                                <h4>Email:</h4>
+                                <p>info@tacticminds.com</p>
+                            </div>
+                            <div class="phone"> <i class="fa fa-phone"></i>
+                                <h4>Call:</h4>
+                                <p>+92 3451157264</p>
+                            </div>
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3401.135019823459!2d74.26640691566784!3d31.52045138136953!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x68baff11090b35d1%3A0xfbb26d092024d167!2sTacticMinds!5e0!3m2!1sen!2sus!4v1677584092879!5m2!1sen!2sus"
+                                width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        </div>
+                    </div>
+                    <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
+                        <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+                            <div class="row">
+                                <div class="form-group col-md-6"> <label for="name">Your Name</label> <input type="text"
+                                        name="name" class="form-control" id="name" required=""></div>
+                                <div class="form-group col-md-6"> <label for="name">Your Email</label> <input
+                                        type="email" class="form-control" name="email" id="email" required=""></div>
+                            </div>
+                            <div class="form-group"> <label for="name">Subject</label> <input type="text"
+                                    class="form-control" name="subject" id="subject" required=""></div>
+                            <div class="form-group"> <label for="name">Message</label><textarea class="form-control"
+                                    name="message" rows="10" required=""></textarea></div>
+                            <div class="text-center"><button type="submit">Send Message</button></div>
+                        </form>
                     </div>
                 </div>
             </div>
