--- a/Templates/business_template.html
+++ b/Templates/business_template.html
@@ -42,7 +42,7 @@
                             <li class="nav-item"><a id="team" href="#">Team</a></li>
                             <li class="nav-item ">
                                 <select class="form-select">
-                                    <option selected>DropDown</option>
+                                    <option selected="">DropDown</option>
                                     <option value="1">One</option>
                                     <option value="2">Two</option>
                                     <option value="3">Three</option>
@@ -412,49 +412,59 @@
                             <div class="member-info">
                                 <h4>Walter White</h4> <span>Chief Executive Officer</span>
                                 <p>Explicabo voluptatem mollitia et repellat qui dolorum quasi</p>
-                                <div class="social"> <a href=""><i class="fa-brands fa-twitter"></i></a> <a href=""><i
-                                            class="fa-brands fa-facebook-f"></i></a> <a href=""><i
-                                            class="fa-brands fa-instagram"></i></a> <a href=""> <i
-                                            class="fa-brands fa-linkedin"></i> </a></div>
+                                <div class="social"> <a href="https://twitter.com/" target="_blank"><i
+                                            class="fa-brands fa-twitter"></i></a> <a href="https://facebook.com/"
+                                        target="_blank"><i class="fa-brands fa-facebook-f"></i></a> <a
+                                        href="https://instagram.com/" target="_blank"><i
+                                            class="fa-brands fa-instagram"></i></a> <a href="https://linkedin.com/"
+                                        target="_blank"> <i class="fa-brands fa-linkedin"></i> </a></div>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-6 mt-4 mt-lg-0">
                         <div class="member d-flex align-items-start">
-                            <div class="pic"><img src="../Photos/team-2.jpg" class="img-fluid" alt=""></div>
+                            <div class="pic"><img src="../Photos/team-2.jpg" class="img-fluid"
+                                    alt="https://twitter.com/"></div>
                             <div class="member-info">
                                 <h4>Sarah Jhonson</h4> <span>Product Manager</span>
                                 <p>Aut maiores voluptates amet et quis praesentium qui senda para</p>
-                                <div class="social"> <a href=""><i class="fa-brands fa-twitter"></i></a> <a href=""><i
-                                            class="fa-brands fa-facebook-f"></i></a> <a href=""><i
-                                            class="fa-brands fa-instagram"></i></a> <a href=""> <i
-                                            class="fa-brands fa-linkedin"></i> </a></div>
+                                <div class="social"> <a href="https://twitter.com/" target="_blank"><i
+                                            class="fa-brands fa-twitter"></i></a> <a href="https://facebook.com/"
+                                        target="_blank"><i class="fa-brands fa-facebook-f"></i></a> <a
+                                        href="https://instagram.com/" target="_blank"><i
+                                            class="fa-brands fa-instagram"></i></a> <a href="https://linkedin.com/"
+                                        target="_blank"> <i class="fa-brands fa-linkedin"></i> </a></div>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-6 mt-4">
                         <div class="member d-flex align-items-start">
-                            <div class="pic"><img src="../Photos/team-3.jpg" class="img-fluid" alt=""></div>
+                            <div class="pic"><img src="../Photos/team-3.jpg" class="img-fluid"
+                                    alt="https://twitter.com/"></div>
                             <div class="member-info">
                                 <h4>William Anderson</h4> <span>CTO</span>
                                 <p>Quisquam facilis cum velit laborum corrupti fuga rerum quia</p>
-                                <div class="social"> <a href=""><i class="fa-brands fa-twitter"></i></a> <a href=""><i
-                                            class="fa-brands fa-facebook-f"></i></a> <a href=""><i
-                                            class="fa-brands fa-instagram"></i></a> <a href=""> <i
-                                            class="fa-brands fa-linkedin"></i> </a></div>
+                                <div class="social"> <a href="https://twitter.com/" target="_blank"><i
+                                            class="fa-brands fa-twitter"></i></a> <a href="https://facebook.com/"
+                                        target="_blank"><i class="fa-brands fa-facebook-f"></i></a> <a
+                                        href="https://instagram.com/" target="_blank"><i
+                                            class="fa-brands fa-instagram"></i></a> <a href="https://linkedin.com/"
+                                        target="_blank"> <i class="fa-brands fa-linkedin"></i> </a></div>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-6 mt-4">
                         <div class="member d-flex align-items-start">
-                            <div class="pic"><img src="../Photos/team-4.jpg" class="img-fluid" alt=""></div>
+                            <div class="pic"><img src="../Photos/team-4.jpg" class="img-fluid"></div>
                             <div class="member-info">
                                 <h4>Amanda Jepson</h4> <span>Accountant</span>
                                 <p>Dolorum tempora officiis odit laborum officiis et et accusamus</p>
-                                <div class="social"> <a href=""><i class="fa-brands fa-twitter"></i></a> <a href=""><i
-                                            class="fa-brands fa-facebook-f"></i></a> <a href=""><i
-                                            class="fa-brands fa-instagram"></i></a> <a href=""> <i
-                                            class="fa-brands fa-linkedin"></i> </a></div>
+                                <div class="social"> <a href="https://twitter.com/" target="_blank"><i
+                                            class="fa-brands fa-twitter"></i></a> <a href="https://facebookcom/"
+                                        target="_blank"><i class="fa-brands fa-facebook-f"></i></a> <a
+                                        href="https://instagram.com/" target="_blank"><i
+                                            class="fa-brands fa-instagram"></i></a> <a href="https://linkedin.com/"
+                                        target="_blank"> <i class="fa-brands fa-linkedin"></i> </a></div>
                             </div>
                         </div>
                     </div>
@@ -644,7 +654,74 @@
             </div>
         </section>
     </main>
-
+    <footer id="footer">
+        <div class="footer-newsletter">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-lg-6">
+                        <h4>Join Our Newsletter</h4>
+                        <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+                        <form action="" method="post"> <input type="email" name="email"><input type="submit"
+                                value="Subscribe"></form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer-top">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-3 col-md-6 footer-contact">
+                        <h3>Umair</h3>
+                        <p> Office #201, Second Floor, <br> Zam Zam Height, <br> Liqat Chowk, Lahore,<br> Pakistan
+                            <br><br> <strong>Phone:</strong>
+                            +92 345 1157264<br> <strong>Email:</strong> info@tacticminds.com<br>
+                        </p>
+                    </div>
+                    <div class="col-lg-3 col-md-6 footer-links">
+                        <h4>Useful Links</h4>
+                        <ul>
+                            <li><i class="fa fa-chevron-right"></i> <a href="#">Home</a></li>
+                            <li><i class="fa fa-chevron-right"></i> <a href="#">About us</a></li>
+                            <li><i class="fa fa-chevron-right"></i> <a href="#">Services</a></li>
+                            <li><i class="fa fa-chevron-right"></i> <a href="#">Terms of service</a></li>
+                            <li><i class="fa fa-chevron-right"></i> <a href="#">Privacy policy</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-3 col-md-6 footer-links">
+                        <h4>Our Services</h4>
+                        <ul>
+                            <li><i class="fa fa-chevron-right"></i> <a href="#">Web Design</a></li>
+                            <li><i class="fa fa-chevron-right"></i> <a href="#">Web Development</a></li>
+                            <li><i class="fa fa-chevron-right"></i> <a href="#">Product Management</a></li>
+                            <li><i class="fa fa-chevron-right"></i> <a href="#">Marketing</a></li>
+                            <li><i class="fa fa-chevron-right"></i> <a href="#">Graphic Design</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-3 col-md-6 footer-links">
+                        <h4>Our Social Networks</h4>
+                        <p>Cras fermentum odio eu feugiat lide par naso tierra videa magna derita valies</p>
+                        <div class="social-links mt-3"> <a href="https://twitter.com/" target="_blank"
+                                class="twitter"><i class="fa-brands fa-twitter"></i></a>
+                            <a href="https://facebook.com/" target="_blank" class="facebook"><i
+                                    class="fa-brands fa-facebook-f"></i></a>
+                            <a href="https://instagram.com/" target="_blank" class="instagram"><i
+                                    class="fa-brands fa-instagram"></i></a>
+                            <a href="https://skype.com/" target="_blank" class="google-plus"><i
+                                    class="fa-brands fa-skype"></i></a> <a href="https://linkedin.com/" target="_blank"
+                                class="linkedin"><i class="fa-brands fa-linkedin-in"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container footer-bottom clearfix">
+            <div class="copyright"> © Copyright <strong><span>Tactic Minds</span></strong>. All Rights Reserved</div>
+            <div class="credits"> Designed by <a href="https://wa.me/3451157264" target="_blank" style="color: #47b2e4;">Umair
+                    Aftab</a></div>
+        </div>
+    </footer>
+    <a href="#" class="back-to-top d-flex align-items-center justify-content-center active">
+        <i class="fa-solid fa-arrow-up"></i></a>
 </body>
 
 </html>
