--- a/Templates/business_template.css
+++ b/Templates/business_template.css
@@ -64,7 +64,8 @@
     color: white;
     padding: 12px 30px;
 }
-#nav-btn:hover{
+
+#nav-btn:hover {
     color: white;
     background-color: #47b2e4;
 }
@@ -181,9 +182,11 @@ h6 {
     color: #fff;
     background: #47B2E4;
 }
-#hero .btn-get-started:hover{
+
+#hero .btn-get-started:hover {
     text-decoration: none;
 }
+
 a {
     text-decoration: none;
 }
@@ -206,9 +209,11 @@ a:-webkit-any-link {
     color: #fff;
     line-height: 1;
 }
-#hero .btn-watch-video:hover{
+
+#hero .btn-watch-video:hover {
     text-decoration: none;
 }
+
 #hero .btn-watch-video #i {
     margin-right: 8px;
 }
@@ -217,13 +222,16 @@ a:-webkit-any-link {
     max-width: 100%;
     height: auto;
 }
+
 .clients {
     padding: 12px 0;
     text-align: center;
 }
+
 .section-bg {
     background-color: #f3f5fa;
 }
+
 .clients img {
     max-width: 45%;
     transition: all 0.4s ease-in-out;
@@ -231,14 +239,17 @@ a:-webkit-any-link {
     padding: 15px 0;
     filter: grayscale(100);
 }
-.clients img:hover{
+
+.clients img:hover {
     filter: none;
     cursor: pointer;
 }
+
 .section-title {
     text-align: center;
     padding-bottom: 30px;
 }
+
 .section-title h2 {
     font-size: 32px;
     font-weight: bold;
@@ -248,6 +259,7 @@ a:-webkit-any-link {
     position: relative;
     color: #37517e;
 }
+
 .section-title h2::before {
     content: "";
     position: absolute;
@@ -258,6 +270,7 @@ a:-webkit-any-link {
     bottom: 1px;
     left: calc(50% - 60px);
 }
+
 .section-title h2::after {
     content: "";
     position: absolute;
@@ -268,6 +281,7 @@ a:-webkit-any-link {
     bottom: 0;
     left: calc(50% - 20px);
 }
+
 p {
     margin-top: 0;
     margin-bottom: 1rem;
@@ -277,14 +291,19 @@ p {
     margin-inline-start: 0px;
     margin-inline-end: 0px;
 }
+
 .about .content ul {
     list-style: none;
     padding: 0;
 }
-dl, ol, ul {
+
+dl,
+ol,
+ul {
     margin-top: 0;
     margin-bottom: 1rem;
 }
+
 ul {
     display: block;
     margin-block-start: 1em;
@@ -293,16 +312,20 @@ ul {
     margin-inline-end: 0px;
     padding-inline-start: 40px;
 }
+
 .about .content ul li {
     position: relative;
 }
+
 li {
     display: list-item;
     text-align: -webkit-match-parent;
 }
+
 .about .content ul li+li {
     margin-top: 10px;
 }
+
 .about .content .btn-learn-more {
     letter-spacing: 1px;
     display: inline-block;
@@ -313,51 +336,63 @@ li {
     margin-top: 6px;
     border: 2px solid #47b2e4;
 }
-.about .content .btn-learn-more:hover{
+
+.about .content .btn-learn-more:hover {
     background-color: #47b2e4;
     color: white;
     text-decoration: none;
 }
+
 .why-us .content {
     padding: 60px 100px 0 100px;
 }
+
 .why-us .content h3 {
     font-weight: 400;
     font-size: 34px;
     color: #37517e;
 }
-b, strong {
+
+b,
+strong {
     font-weight: bolder;
 }
+
 .why-us .content p {
     font-size: 15px;
     color: #848484;
 }
+
 .why-us .accordion-list {
     padding: 0 100px 60px 100px;
 }
+
 .why-us .accordion-list ul {
     padding: 0;
     list-style: none;
 }
+
 .why-us .accordion-list #li1 {
     padding: 20px;
     background: #fff;
     border-radius: 4px;
     margin-bottom: 20px;
 }
+
 .why-us .accordion-list #li2 {
     padding: 20px;
     background: #fff;
     border-radius: 4px;
     margin-bottom: 20px;
 }
+
 .why-us .accordion-list #li3 {
     padding: 20px;
     background: #fff;
     border-radius: 4px;
     margin-bottom: 20px;
 }
+
 .why-us .accordion-list a {
     display: block;
     position: relative;
@@ -369,57 +404,72 @@ b, strong {
     outline: none;
     cursor: pointer;
 }
+
 a:hover {
     color: #47b2e4;
     text-decoration: none;
 }
+
 .why-us .accordion-list a.collapsed {
     color: #343a40;
 }
+
 .why-us .img {
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center center;
 }
+
 .why-us .accordion-list span {
     color: #47b2e4;
     font-weight: 600;
     font-size: 18px;
     padding-right: 10px;
 }
+
 .why-us .accordion-list .icon-show {
     display: none;
 }
+
 .why-us .accordion-list a.collapsed .icon-show {
     display: inline-block;
 }
+
 .why-us .accordion-list i {
     font-size: 14px;
     position: absolute;
     right: 0;
     top: 0;
 }
+
 .why-us .accordion-list a.collapsed:hover {
     color: #47b2e4;
 }
+
 .why-us .accordion-list a.collapse {
     color: #47b2e4;
 }
+
 .why-us .accordion-list a.collapsed .icon-close {
     display: none;
 }
+
 .collapse:not(.show) {
     display: none;
 }
+
 .why-us .accordion-list p {
     margin-bottom: 0;
     padding: 10px 0 0 0;
 }
+
 img {
     overflow-clip-margin: content-box;
     overflow: clip;
 }
-img, svg {
+
+img,
+svg {
     vertical-align: middle;
 }
 
@@ -429,6 +479,7 @@ img, svg {
     color: #37517e;
     font-family: "Poppins", sans-serif;
 }
+
 .skills .progress {
     height: 40px;
     display: block;
@@ -439,6 +490,7 @@ img, svg {
     border: none;
     box-shadow: none;
 }
+
 .skills .progress .skill {
     padding: 0;
     margin: 0 0 6px 0;
@@ -449,23 +501,28 @@ img, svg {
     font-family: "Poppins", sans-serif;
     color: #37517e;
 }
+
 .skills .progress .skill .val {
     float: right;
     font-style: normal;
 }
+
 .skills .progress-bar-wrap {
     background: #e8edf5;
     height: 10px;
 }
+
 .skills .progress-bar {
     /* width: 1px; */
     height: 10px;
     /* transition: 0.9s; */
     background-color: #4668a2;
 }
+
 .section-title p {
     margin-bottom: 0;
 }
+
 .services .icon-box {
     box-shadow: 0px 0 25px 0 rgb(0 0 0 / 10%);
     padding: 50px 30px;
@@ -473,45 +530,55 @@ img, svg {
     background: #fff;
     color: #343a40;
 }
+
 .services .icon-box .icon {
     margin-bottom: 10px;
 }
+
 .services .icon-box h4 {
     font-weight: 500;
     margin-bottom: 15px;
     font-size: 24px;
 }
+
 .services .icon-box h4 a {
     color: #37517e;
     /* transition: ease-in-out 0.3s; */
 }
+
 .services .icon-box p {
     line-height: 24px;
     font-size: 14px;
     margin-bottom: 0;
 }
-.icon i{
+
+.icon i {
     color: #47b2e4;
     font-size: 30px;
 }
-.services .icon-box h4 a:hover{
+
+.services .icon-box h4 a:hover {
     text-decoration: none;
     color: #47B2E4;
 }
+
 .cta {
     background: linear-gradient(rgba(40, 58, 90, 0.9), rgba(40, 58, 90, 0.9)), url("../Photos/cta-bg.jpg") fixed center center;
     background-size: cover;
     padding: 120px 0;
 }
+
 .cta h3 {
     color: #fff;
     font-size: 30px;
     font-weight: 700;
 }
+
 .cta p {
     color: #fff;
     font-size: 18px;
 }
+
 .cta .cta-btn {
     font-family: "Jost", sans-serif;
     font-weight: 500;
@@ -525,38 +592,45 @@ img, svg {
     border: 2px solid #fff;
     color: #fff;
 }
+
 .cta .cta-btn:hover {
     text-decoration: none;
     background-color: #47b2e4;
 }
+
 .portfolio #portfolio-flters {
     list-style: none;
     margin-bottom: 20px;
 }
 
-.portfolio #portfolio-flters li:hover, .portfolio #portfolio-flters li.filter-active {
+.portfolio #portfolio-flters li:hover,
+.portfolio #portfolio-flters li.filter-active {
     background: #47b2e4;
     color: #fff;
 }
+
 .portfolio #portfolio-flters li {
-cursor: pointer;
-display: inline-block;
-margin: 10px 5px;
-font-size: 15px;
-font-weight: 500;
-line-height: 1;
-color: #444444;
-transition: all 0.3s;
-padding: 8px 20px;
-border-radius: 50px;
-font-family: "Poppins", sans-serif;
+    cursor: pointer;
+    display: inline-block;
+    margin: 10px 5px;
+    font-size: 15px;
+    font-weight: 500;
+    line-height: 1;
+    color: #444444;
+    transition: all 0.3s;
+    padding: 8px 20px;
+    border-radius: 50px;
+    font-family: "Poppins", sans-serif;
 }
+
 .portfolio .portfolio-item {
     margin-bottom: 30px;
 }
+
 .portfolio .portfolio-item .portfolio-img {
     overflow: hidden;
 }
+
 .portfolio .portfolio-item .portfolio-info {
     opacity: 0;
     position: absolute;
@@ -568,6 +642,7 @@ font-family: "Poppins", sans-serif;
     background: rgba(55, 81, 126, 0.8);
     padding: 10px 15px;
 }
+
 .portfolio .portfolio-item .portfolio-info h4 {
     font-size: 18px;
     color: #fff;
@@ -575,11 +650,13 @@ font-family: "Poppins", sans-serif;
     color: #fff;
     margin-bottom: 0px;
 }
+
 .portfolio .portfolio-item .portfolio-info p {
     color: #f9fcfe;
     font-size: 14px;
     margin-bottom: 0;
 }
+
 .team .member {
     position: relative;
     box-shadow: 0px 2px 15px rgb(0 0 0 / 10%);
@@ -589,38 +666,46 @@ font-family: "Poppins", sans-serif;
     transition: 0.5s;
     height: 100%;
 }
+
 .team .member .pic {
     overflow: hidden;
     width: 180px;
     border-radius: 50%;
 }
+
 .team .member .member-info {
     padding-left: 30px;
 }
-.member-info h4{
+
+.member-info h4 {
     color: #37517E;
     font-size: 20px;
     font-weight: bolder;
-    
+
 }
-.member-info span{
+
+.member-info span {
     color: #343a40;
 }
-.member-info p{
+
+.member-info p {
     margin-top: 10px;
     color: #343a40;
 }
-.member-info i{
+
+.member-info i {
     color: #37517E;
     padding: 10px;
     background-color: whitesmoke;
     border-radius: 20px;
 }
-.member-info span::after{
+
+.member-info span::after {
     white-space: pre;
     content: "\a_______ ";
     opacity: 0.3;
 }
+
 .section-title h2::before {
     content: "";
     position: absolute;
@@ -631,6 +716,7 @@ font-family: "Poppins", sans-serif;
     bottom: 1px;
     left: calc(50% - 60px);
 }
+
 .section-title h2::after {
     content: "";
     position: absolute;
@@ -641,9 +727,11 @@ font-family: "Poppins", sans-serif;
     bottom: 0;
     left: calc(50% - 20px);
 }
+
 .pricing .row {
     padding-top: 40px;
 }
+
 .pricing .box {
     padding: 60px 40px;
     box-shadow: 0 3px 20px -2px rgb(20 45 100 / 10%);
@@ -652,12 +740,14 @@ font-family: "Poppins", sans-serif;
     border-top: 4px solid #fff;
     border-radius: 5px;
 }
+
 .pricing h3 {
     font-weight: 500;
     margin-bottom: 15px;
     font-size: 20px;
     color: #37517e;
 }
+
 .pricing h4 {
     font-size: 48px;
     color: #37517e;
@@ -665,23 +755,29 @@ font-family: "Poppins", sans-serif;
     font-family: "Jost", sans-serif;
     margin-bottom: 25px;
 }
+
 .pricing h4 sup {
     font-size: 28px;
 }
+
 sup {
     top: -0.5em;
 }
-sub, sup {
+
+sub,
+sup {
     position: relative;
     font-size: .75em;
     line-height: 0;
     vertical-align: baseline;
 }
+
 .pricing h4 span {
     color: #47b2e4;
     font-size: 18px;
     display: block;
 }
+
 .pricing ul {
     padding: 20px 0;
     list-style: none;
@@ -689,13 +785,17 @@ sub, sup {
     text-align: left;
     line-height: 20px;
 }
-ol, ul {
+
+ol,
+ul {
     padding-left: 2rem;
 }
+
 .pricing ul li {
     padding: 10px 0 10px 30px;
     position: relative;
 }
+
 .pricing ul i {
     color: #28a745;
     font-size: 16px;
@@ -703,15 +803,19 @@ ol, ul {
     left: 0;
     top: 6px;
 }
+
 .pricing ul .na {
     color: #ccc;
 }
+
 .pricing ul .na i {
     color: #ccc;
 }
+
 .pricing ul .na span {
     text-decoration: line-through;
 }
+
 .pricing .buy-btn {
     display: inline-block;
     padding: 12px 35px;
@@ -724,55 +828,66 @@ ol, ul {
     transition: 0.3s;
     border: 1px solid #47b2e4;
 }
+
 .pricing .buy-btn:hover {
     text-decoration: none;
     background-color: #47B2E4;
     color: white;
 }
+
 .pricing .featured .buy-btn {
     background: #47b2e4;
     color: #fff;
 }
-.pricing .featured  {
+
+.pricing .featured {
     border-top: 4px solid #47B2E4;
 }
+
 .faq .accordion-list .li1 {
     padding: 20px;
     background: #fff;
     border-radius: 4px;
     margin-bottom: 20px;
 }
+
 .faq .accordion-list .li2 {
     padding: 20px;
     background: #fff;
     border-radius: 4px;
     margin-bottom: 20px;
 }
+
 .faq .accordion-list .li3 {
     padding: 20px;
     background: #fff;
     border-radius: 4px;
     margin-bottom: 20px;
 }
+
 .faq .accordion-list .li4 {
     padding: 20px;
     background: #fff;
     border-radius: 4px;
     margin-bottom: 20px;
 }
+
 .faq .accordion-list .li5 {
     padding: 20px;
     background: #fff;
     border-radius: 4px;
     margin-bottom: 20px;
 }
+
 .faq .accordion-list {
     padding: 0 100px 60px 100px;
 }
+
 .faq .accordion-list ul {
     padding: 0;
     list-style: none;
 }
+
 .faq .accordion-list a {
     display: block;
     position: relative;
@@ -784,53 +899,66 @@ ol, ul {
     outline: none;
     cursor: pointer;
 }
+
 a:hover {
     color: #47b2e4;
     text-decoration: none;
 }
+
 .faq .accordion-list a.collapsed {
     color: #343a40;
 }
+
 .faq .img {
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center center;
 }
+
 .faq .accordion-list span {
     color: #47b2e4;
     font-weight: 600;
     font-size: 18px;
     padding-right: 10px;
-    
+
 }
+
 .faq .accordion-list .icon-show {
     display: none;
 }
+
 .faq .accordion-list a.collapsed .icon-show {
     display: inline-block;
 }
+
 .faq .accordion-list i {
     font-size: 14px;
     position: absolute;
     right: 0;
     top: 0;
 }
+
 .faq .accordion-list a.collapsed:hover {
     color: #47b2e4;
 }
+
 .faq .accordion-list a.collapse {
     color: #47b2e4;
 }
+
 .faq .accordion-list a.collapsed .icon-close {
     display: none;
 }
+
 .collapse:not(.show) {
     display: none;
 }
+
 .faq .accordion-list p {
     margin-bottom: 0;
     padding: 10px 0 0 0;
 }
+
 .contact .info {
     border-top: 3px solid #47b2e4;
     border-bottom: 3px solid #47b2e4;
@@ -839,6 +967,7 @@ a:hover {
     width: 100%;
     box-shadow: 0 0 24px 0 rgb(0 0 0 / 10%);
 }
+
 .contact .info i {
     font-size: 20px;
     color: #47b2e4;
@@ -851,6 +980,7 @@ a:hover {
     align-items: center;
     border-radius: 50px;
 }
+
 .contact .info h4 {
     padding: 0 0 0 60px;
     font-size: 22px;
@@ -858,12 +988,14 @@ a:hover {
     margin-bottom: 5px;
     color: #37517e;
 }
+
 .contact .info p {
     padding: 0 0 10px 60px;
     margin-bottom: 20px;
     font-size: 14px;
     color: #6182ba;
 }
+
 .contact .php-email-form {
     width: 100%;
     border-top: 3px solid #47b2e4;
@@ -872,10 +1004,12 @@ a:hover {
     background: #fff;
     box-shadow: 0 0 24px 0 rgb(0 0 0 / 12%);
 }
+
 .contact .php-email-form .form-group {
     margin-bottom: 20px;
     padding-bottom: 8px;
 }
+
 .contact .php-email-form label {
     padding-bottom: 8px;
     color: #343a40;
@@ -886,18 +1020,225 @@ a:hover {
 .contact .php-email-form input {
     height: 44px;
 }
-.contact .php-email-form input, .contact .php-email-form textarea {
+
+.contact .php-email-form input,
+.contact .php-email-form textarea {
     box-shadow: none;
     font-size: 14px;
     border-radius: 4px;
 }
+
 .text-center {
-    text-align: center!important;
+    text-align: center !important;
 }
+
 .contact .php-email-form button[type=submit] {
     background: #47b2e4;
     border: 0;
     padding: 12px 34px;
     color: #fff;
     border-radius: 50px;
+}
+
+#footer {
+    font-size: 14px;
+    background: #37517e;
+}
+
+footer {
+    display: block;
+}
+
+#footer .footer-newsletter {
+    padding: 50px 0;
+    background: #f3f5fa;
+    text-align: center;
+    font-size: 15px;
+    color: #444444;
+}
+
+#footer .footer-newsletter h4 {
+    font-size: 24px;
+    margin: 0 0 20px 0;
+    padding: 0;
+    line-height: 1;
+    font-weight: 600;
+    color: #37517e;
+}
+
+#footer .footer-newsletter form {
+    margin-top: 30px;
+    background: #fff;
+    padding: 6px 10px;
+    position: relative;
+    border-radius: 50px;
+    box-shadow: 0px 2px 15px rgb(0 0 0 / 6%);
+    text-align: left;
+}
+
+form {
+    display: block;
+    margin-top: 0em;
+}
+
+#footer .footer-newsletter form input[type=email] {
+    border: 0;
+    padding: 4px 8px;
+    width: calc(100% - 100px);
+}
+
+button,
+input,
+optgroup,
+select,
+textarea {
+    margin: 0;
+    font-family: inherit;
+    font-size: inherit;
+    line-height: inherit;
+}
+
+#footer .footer-newsletter form input[type=submit] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    border: 0;
+    background: none;
+    font-size: 16px;
+    padding: 0 20px;
+    background: #47b2e4;
+    color: #fff;
+    transition: 0.3s;
+    border-radius: 50px;
+    box-shadow: 0px 2px 15px rgb(0 0 0 / 10%);
+}
+
+#footer .footer-top {
+    padding: 60px 0 30px 0;
+    background: #fff;
+}
+
+#footer .footer-top .footer-contact {
+    margin-bottom: 30px;
+}
+
+#footer .footer-top .footer-contact h3 {
+    font-size: 28px;
+    margin: 0 0 10px 0;
+    padding: 2px 0 2px 0;
+    line-height: 1;
+    text-transform: uppercase;
+    font-weight: 600;
+    color: #37517e;
+}
+
+#footer .footer-top .footer-contact p {
+    font-size: 14px;
+    line-height: 24px;
+    margin-bottom: 0;
+    font-family: "Jost", sans-serif;
+    color: #5e5e5e;
+}
+
+#footer .footer-top .footer-links {
+    margin-bottom: 30px;
+}
+
+#footer .footer-top h4 {
+    font-size: 16px;
+    font-weight: bold;
+    color: #37517e;
+    position: relative;
+    padding-bottom: 12px;
+}
+
+#footer .footer-top .footer-links ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+#footer .footer-top .footer-links ul li {
+    padding: 10px 0;
+    display: flex;
+    align-items: center;
+}
+
+#footer .footer-top .footer-links ul li:first-child {
+    padding-top: 0;
+}
+
+#footer .footer-top .footer-links ul i {
+    padding-right: 8px;
+    color: #47b2e4;
+    font-size: 10px;
+    line-height: 1;
+}
+
+#footer .footer-top .footer-links ul a {
+    color: #777777;
+    display: inline-block;
+    line-height: 1;
+}
+
+#footer .footer-top .footer-links ul a:hover {
+    text-decoration: none;
+    color: #47B2E4;
+}
+
+.mt-3 {
+    margin-top: 1rem !important;
+}
+
+#footer .footer-top .social-links a {
+    font-size: 18px;
+    display: inline-block;
+    background: #47b2e4;
+    color: #fff;
+    line-height: 1;
+    padding: 8px 0;
+    margin-right: 4px;
+    border-radius: 50%;
+    text-align: center;
+    width: 36px;
+    height: 36px;
+}
+
+#footer .footer-bottom {
+    padding-top: 30px;
+    padding-bottom: 30px;
+    color: #fff;
+}
+
+#footer .copyright {
+    float: left;
+}
+
+#footer .credits {
+    float: right;
+    font-size: 13px;
+}
+.back-to-top.active {
+    visibility: visible;
+    opacity: 1;
+}
+.back-to-top {
+    position: fixed;
+    right: 15px;
+    bottom: 15px;
+    background: #47b2e4;
+    width: 40px;
+    height: 40px;
+    border-radius: 50px;
+    outline: none;
+}
+.back-to-top i {
+    font-size: 24px;
+    color: #fff;
+    line-height: 0;
+}
+.back-to-top:hover {
+    text-decoration: none;
+    outline: none;
 }
